# IOC-Matcher

./: README.md
data/: sample_iocs.csv  sample_iocs.stix.json  sample_logs.jsonl
ioc-matcher/: pyproject.toml
ioc-matcher/configs/: default.yaml  dev.yaml  prod.yaml
src/: config.py  constants.py  errors.py  init.py  loaders.py  schemas.py  types.py  writers.py
src/engines/: cidr.py  exact.py  init.py  url.py
src/match/: compiler.py  init.py  matcher.py  result.py
src/normalize/: enrich.py  init.py  normalize.py  validators.py
src/store/: init.py  memory.py  sqlite.py  versioning.py
