[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "ioc-matcher"
version = "0.1.0"
description = "Defensive IOC matcher (hash/ip/cidr/domain/url) with CLI + optional API"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "uasset" }]
keywords = ["security", "ioc", "threat-intel", "detection", "blue-team", "forensics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0.1",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "orjson>=3.9.15",
  "python-dateutil>=2.9.0.post0"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1"
]
stix = [
  "stix2>=3.0.1"
]
speed = [
  "pyahocorasick>=2.0.0"
]
sqlite = [
  "aiosqlite>=0.20.0"
]

[project.scripts]
ioc-matcher = "ioc_matcher.cli:app"

[project.urls]
Homepage = "https://example.invalid/ioc-matcher"
Repository = "https://example.invalid/ioc-matcher"
Issues = "https://example.invalid/ioc-matcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ioc_matcher"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "tests/**",
  "configs/**",
  "data/**",
  "scripts/**",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = ["src"]